--- a/client/src/views/player.html
+++ b/client/src/views/player.html
@@ -33,7 +33,7 @@
             </div>
         </div>
     </div>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/player.js"></script>
 </body>
 
 </html>
