--- a/client/src/views/player.html
+++ b/client/src/views/player.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Multiplayer Game</title>
-    <link rel="stylesheet" href="./res/index.css">
+    <link rel="stylesheet" href="/res/index.css">
 </head>
 
 <body>
