--- a/client/src/views/player.html
+++ b/client/src/views/player.html
@@ -19,7 +19,7 @@
         </div>
         <div id="question-container" class="question-container" style="display: none;">
             <div class="score">Score: <span id="player-score">0</span></div> <div class="question-content">
-              <h2>Question:</h2>
+              <h2 id="question-title">Question:</h2>
               <p id="question-text"></p>
               <div class="options">
                 <label class="option">
