--- a/client/src/views/res/player.css
+++ b/client/src/views/res/player.css
@@ -88,10 +88,16 @@ button:hover {
   margin-top: 10px;
 }
 
-.leaderboard {
-  margin-top: 20px;
+table {
+  border-collapse: collapse;
+  width: 50%;
 }
-
-.leaderboard-entry {
-  margin-bottom: 5px;
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+th {
+  background-color: #f2f2f2;
 }
