Add end quizz stream

--- a/client/src/views/admin.html
+++ b/client/src/views/admin.html
@@ -41,7 +41,7 @@
                 </tbody>
             </table>
 
-            <button id="end-game-button" class="end-game-button">End Game</button>
+            <button type="button" id="end-game-button" class="end-game-button-enabled">End Game</button>
         </div>
     </div>
     <script src="./scripts/admin.js"></script>
