--- a/client/src/views/player.html
+++ b/client/src/views/player.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="end-game-container" id="end-game-container" style="display: none;">
-      <h2>Quizz Over!</h2>
+      <h2>Quiz Over!</h2>
       <div class="score">Your ID: <span id="user-id"></span></div>
       <div class="score">Your Score: <span id="final-score"></span></div>
       <div class="leaderboard">
